--- a/src/App.css
+++ b/src/App.css
@@ -1,4 +1,14 @@
 .App {
+  height: 100%;
+  width: 100%;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+{/*}
+.App {
   text-align: center;
 }
 
@@ -31,3 +41,4 @@
     transform: rotate(360deg);
   }
 }
+*/}
