--- a/src/components/Header.css
+++ b/src/components/Header.css
@@ -1,3 +1,10 @@
 .movie-box-header {
-  color: red;
+  color: black;
+  border-bottom: solid 2px red;
+  width: 90vw;
+  height: 10vh;
+  text-align: center;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
