--- a/src/components/UpComingLink.css
+++ b/src/components/UpComingLink.css
@@ -1,15 +1,20 @@
 .upcoming-link {
   text-align: center;
-
+  border: solid 2px black;
+  border-radius: 10px;
+  padding: 10px 20px;
+  margin: 10px;
+  font-size: 20px;
+  background-color: lightblue;
 }
 
 a {
-  color: #000000;
+  color: blue;
   text-decoration: none;
 }
 
 a:visited {
-  color: #000000;
+  color: blue;
 }
 
 a:hover {
