--- a/src/index.css
+++ b/src/index.css
@@ -17,8 +17,9 @@ code {
 #root {
   height: 100%;
   width: 100%;
-  margin: 0 auto;
+  margin: 10px;
   display: flex;
   justify-content: center;
   align-content: center;
+  font-family: Verdana;
 }
